# brain_prograssion

./: pyproject.toml
brain_games/: gg.py  main.py
brain_games/scripts/: brain_games.py
